--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1> Create an Article</h1>
+<h1>Edit existing article</h1>
 
-<h2>The following errors prevented the article from getting created</h2>
+<h2>The following errors prevented the article from getting edited</h2>
 
 <% if @article.errors.any? %>
 
