--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,72 @@
+$navbar-default-bg: #008cad;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo{
+	float: left;
+	font-size: 1.7em;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	font-weight: bold;
+}
+
+#logo:hover{
+	color: #fff;
+	text-decoration: none;
+}
+
+.center{
+	text-align: center;
+}
+
+.jumbotron {
+	background-image: asset-url('123.jpg');
+	background-size: cover;
+	height: 550px;
+}
+
+.jumbotron h1{
+	color: #fff;
+	text-align: center;
+	margin-bottom: 30px;
+	letter-spacing: -1px;
+	font-weight: bold;
+}
+
+.btn-xlarge{
+	font-size: 1.7em;
+	background-color: black;
+}
+.article-title {
+
+font-weight: bold;
+
+font-size: 1.5em;
+
+article-actions {
+
+border-top: 1px solid #eaeaea;
+
+padding-top: 5px;
+
+}
+
+.description {
+
+margin-top: 0;
+
+}
+
+}
+
+.article-body {
+
+border-top: 1px solid #eaeaea;
+
+padding-top: 15px;
+
+padding-bottom: 15px;
+
+}
