--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,13 @@ $navbar-default-bg: #008cad;
 	font-size: 1.7em;
 	background-color: black;
 }
+
+.article-meta-details {
+	border-top: 1px solid #eaeaea;
+	margin-top: 15px;
+
+}
+
 .article-title {
 
 font-weight: bold;
@@ -70,3 +77,4 @@ padding-top: 15px;
 padding-bottom: 15px;
 
 }
+
