Sign up users from UI

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,7 +28,7 @@ $navbar-default-bg: #008cad;
 }
 
 .jumbotron h1{
-	color: #fff;
+	color: #008cad;
 	text-align: center;
 	margin-bottom: 30px;
 	letter-spacing: -1px;
@@ -37,7 +37,7 @@ $navbar-default-bg: #008cad;
 
 .btn-xlarge{
 	font-size: 1.7em;
-	background-color: black;
+	background-color: #008cad;
 }
 
 .article-meta-details {
